--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "TeraRave",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "express-handlebars": "^3.0.0"
+    "express-handlebars": "^3.0.0",
+    "mongoose": "^4.13.7"
   }
 }
